k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asthropic-backend
  namespace: asthropic-prod
  labels:
    app: asthropic-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: asthropic-backend
  template:
    metadata:
      labels:
        app: asthropic-backend
    spec:
      containers:
      - name: backend
        image: sajal30/asthropic-chatapp-backend:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
